--- a/JavaScriptRemote_ipr/web/html/TrysheRem.html
+++ b/JavaScriptRemote_ipr/web/html/TrysheRem.html
@@ -4,7 +4,8 @@
         <link href="../styles/MyStylesRem.css" rel="stylesheet"/>
         <title>Tryshe</title>
         <script type="text/javascript" src="../scripts/TrysheRem.js"></script>
-        <script type="text/javascript">
+
+        <script type= "text/javascript">
 
             var
                     htmlTab,
@@ -25,13 +26,15 @@
                 }
                 htmlTab.displayCharAt(ch, (txtLine.value.length - 1) < 0 ? 0 : txtLine.value.length - 1);
             }
-
         </script>
     </head>
     <body id="body" onload="onLoad();">
+
         <input id="txtLine" type="text" size="40" onkeyup="displayChar();"/>
         <table id="CellsTab">
         </table>
+    dfsdfsdafs
+    dfsdfsdafs
 
     </body>
 </html>
